@@ -3,6 +3,7 @@
 -add time.set_timer method.
 -update display repaint to sync with program iteration.
 -update sprite to revise member groups.
+-update sprite argument handling.
 
 0.27    2015-04-12
 -update font to enhance fonts access.
